# Virbras

./: .gitignore  LICENSE  README.md
cpp/: CMakeLists.txt
cpp/math/: CMakeLists.txt  eigen_tools.hpp  math_cpp.cpp  non_linear_tools.hpp  oscillations.cpp  oscillations.hpp  test_eigen_tools.cpp  test_non_linear_tools.cpp  test_oscillations.cpp  test_vector_tools.cpp  vector_tools.hpp
cpp/signal/: CMakeLists.txt  amplifiers.hpp  analog_to_digital_filters.hpp  combiners.hpp  feedback_comb_filter.hpp  fft_processing.hpp  filter_base.hpp  flange.hpp  freeverb.hpp  freeverb_main.cpp  sample_rate_firs.hpp  signal_cpp.cpp  signal_stream.hpp  tapped_delay_line.hpp  test_analog_to_digital_filters.cpp  test_feedback_comb_filter.cpp  test_fft_processing.cpp  test_freeverb.cpp  test_signal_stream.cpp  test_tapped_delay_line.cpp  test_utilities.cpp  time_varying_delay.hpp  triode.hpp  utilities.hpp
math_vb/: oscillations.py  test_oscillations.py
physics/one_dimensional/: harmonic_oscillators.py
